[workspace]
members = ["."]

[workspace.dependencies]
log = "0.4"

anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# ===
[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1"
chrono = "0.4"

anyhow = { workspace = true }
thiserror = { workspace = true }

dotenvy = "0.15"

tokio = { version = "1.29", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
futures-util = "0.3"
axum = "0.6"
async-graphql = { version = "5", features = [] }
async-graphql-axum = "5"
serde = { workspace = true }
serde_json = { workspace = true }
