[workspace]
members = [".", "migration"]

[workspace.dependencies]
log = "0.4"

dotenvy = "0.15"

anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_qs = "0.12"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.29", features = ["full"] }
once_cell = "1.18"
time = "0.3"

# ===
[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"

dotenvy = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

url = "2.4"
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["time"] }
futures-util = "0.3"
jsonwebtoken = "8"
axum = { version = "0.6", features = ["headers"] }
axum-extra = { version = "0.7", features = ["cookie"] }
tower-http = { version = "0.4", features = ["cors"] }
async-graphql = { version = "5", features = [] }
async-graphql-axum = "5"
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
chrono = "0.4"
time = { workspace = true }
once_cell = { workspace = true }

sea-orm = { version = "0.11", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
	"with-uuid",
	"with-chrono",
] }
